Finished static page costumize

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <header>
   <%= link_to logo, root_path %>
+  <%= link_to "Ulsimag", root_path, :id => 'logo' %>
   <nav class="round">
     <ul>
       <li><%= link_to "Home", root_path %></li>
@@ -9,3 +10,4 @@
     </ul>
   </nav>
 </header>
+<div class="clear"></div>
