--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,15 @@
   <nav class="round">
     <ul>
       <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "About", about_path %></li>
+      <% if signed_in? %>
+        <li><%= link_to "Profile", '#' %></li>
+        <li><%= link_to "Settings", '#' %></li>
+        <li><%= link_to "Sign out", signout_path, :method => :delete %></li>
+      <% else %>
+        <li><%= link_to "Sign in", signin_path %></li>
+        <li><%= link_to "About", about_path %></li>
+      <% end %>
       <li><%= link_to "Help", help_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
     </ul>
   </nav>
 </header>
