--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -170,24 +170,23 @@ div.field, div.actions {
   margin-bottom: 10px;
 }
 
+div.field label {
+  display: block;
+}
+
 .field_with_errors {
-  margin-top: 10px;
   padding: 2px;
-  background-color: red;
-  display: table;
+  display: block;
+  clear: both;
 }
 
 .field_with_errors label {
-  color: #fff;
+  color: red;
 }
 
 #error_explanation {
   width: 400px;
-  border: 2px solid red;
   padding: 7px;
-  padding-bottom: 12px;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
 }
 
 #error_explanation h2 {
