--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,8 @@
     <ul>
       <li><%= link_to "Home", root_path %></li>
       <% if signed_in? %>
-        <li><%= link_to "Profile", '#' %></li>
-        <li><%= link_to "Settings", '#' %></li>
+        <li><%= link_to "Email", email_inbox_path %></li>
+        <li><%= link_to "Settings", settings_account_path %></li>
         <li><%= link_to "Sign out", signout_path, :method => :delete %></li>
       <% else %>
         <li><%= link_to "Sign in", signin_path %></li>
