--- a/app/views/email/outbox.html.erb
+++ b/app/views/email/outbox.html.erb
@@ -2,4 +2,25 @@
 <div class="round background static span-18 last">
   <h1>Outbox</h1>
   <%= render 'no_email_accounts_notification' %>
+  <%= render 'broken_email_accounts_notification' %>
+
+  <% @emails.each do |email| %>
+    <% if email.respond_to?(:body) %>
+      <div id="email_header">
+        <div class="header_info">
+          <div class="to"><%= clear_address email.from[0] %></div>
+          <div class="from"><b>To:</b> <%= clear_address email.to[0] %></div>
+          <div class="date"><b>Date:</b> <%= clear_datetime email.date %></div>
+        </div>
+        <div class="subject"><b>Subject:</b> <%= not_subject_if_blank email.subject %></div>
+        <a href="" class="show_hide_body hide_body"></a>
+        <div id="body" style="display: none;">
+            <%= clear_body email %>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
+  <br />
 </div>
+
+<%= javascript_include_tag "show_hide_body" %>
