--- a/app/views/settings/email_accounts/index.html.erb
+++ b/app/views/settings/email_accounts/index.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="field">
       <%= f.label :password %>
-      <%= f.text_field :password %>
+      <%= f.password_field :password %>
     </div>
     <div class="actions">
       <%= f.submit "Create" %>
